# qsweep-system

./: .gitignore  CMakeLists.txt  README.md  common.pri  fftw.pri  hackrf.pri  main.cpp  protocol.pri  qsweep-cli.pro  qsweep-lib.pro  qsweep-remote-control.pro  qsweep-srv.pro  qsweep-write.pro  qsweep.pro  topic.pri
cmake/: output.cmake
help/: 3dparty.txt
include/: topic.h
install/config/: qsweepclient.config  qsweepserver.conf  qsweepserver.config  qsweepserver.json  qsweepwrite.conf
install/template/: bluetooth.template  ranges.template  wifi24.template  wifi5.template
lib/qsweepprotocol/: qhackrfinfo.cpp  qhackrfinfo.h  qsweepanswer.cpp  qsweepanswer.h  qsweepmessagelog.cpp  qsweepmessagelog.h  qsweepparams.cpp  qsweepparams.h  qsweepprotocol.pro  qsweepprotocol_global.h  qsweeprequest.cpp  qsweeprequest.h  qsweepspectr.cpp  qsweepspectr.h  qsweepsystemmonitor.cpp  qsweepsystemmonitor.h  qsweeptopic.cpp  qsweeptopic.h
script/: build-fftw-3.3.7.ps1
src/: coresweep.cpp  coresweep.h  ctrlsweepworker.cpp  ctrlsweepworker.h  hackrfinfo.cpp  hackrfinfo.h  sweepparams.cpp  sweepworker.cpp  sweepworker.h
src/protocol/: broker_ctrl.cpp  broker_ctrl.h  constkeys.h  data_log.cpp  data_log.h  data_spectr.cpp  data_spectr.h  params_spectr.cpp  params_spectr.h  qhackrfinfo.cpp  qhackrfinfo.h  qsweepanswer.h  qsweepmessagelog.h  qsweepparams.cpp  qsweepparams.h  qsweeprequest.cpp  qsweeprequest.h  qsweepspectr.h  qsweepsystemmonitor.cpp  qsweepsystemmonitor.h  qsweeptopic.h  sdr_info.cpp  sdr_info.h  sweep_message.cpp  sweep_message.h  sweep_topic.cpp  sweep_topic.h  system_monitor.cpp  system_monitor.h
src/qsweep-client/: CMakeLists.txt  core_sweep_client.cpp  core_sweep_client.h  coresweepclient.cpp  coresweepclient.h  qsweep-client.cpp  qsweepclient.cpp  state_sweep_client.cpp  state_sweep_client.h
src/qsweep-client/chart/: spectr_item.cpp  surface_spectr.cpp  surface_spectr.h
src/qsweep-client/database/: db_local_state.cpp
src/qsweep-client/model/: hackrf_info_model.cpp  hackrf_info_model.h  message_log_model.cpp  message_log_model.h  params_spectr_model.h  ranges_template_model.cpp  ranges_template_model.h
src/qsweep-client/qml/: DialogFreqInfo.qml  DialogMessageLog.qml  DialogParamsSpectr.qml  DialogSDRInfo.qml  FreqInfo.qml  FreqInfoForm.ui.qml  MessageLog.qml  MessageLogForm.ui.qml  ParamsSpectr.qml  ParamsSpectrForm.ui.qml  SDRInfo.qml  SDRInfoForm.ui.qml  SpectrSurface.qml  TopForm.ui.qml  main.qml
src/qsweep-client/settings/: client_settings.cpp
src/qsweep-client/spectr/: ta_spectr.cpp
src/qsweep-client/template/: ranges_template.h
src/qsweep-client/ui_interface/: system_monitor_interface.cpp  user_interface.h
src/qsweep-protocol/: CMakeLists.txt  constkeys.h  params_spectr.cpp  qsweep-protocol_global.h  sdr_info.cpp  sweep_topic.h  system_monitor.h
src/qsweep-remote-control/: CMakeLists.txt  core_sweep_remote_control.cpp
src/qsweep-remote-control/manager/: net_manager.cpp
src/qsweep-remote-control/model/: fft_width.cpp  lna_gain.cpp  lna_gain_model.cpp  ui_model.cpp
src/qsweep-remote-control/qml/: SpectrFreqParams.qml  Top.qml  TopForm.ui.qml
src/qsweep-remote-control/settings/: mqtt_provider_settings.cpp  remote_control_settings.h
src/qsweep-server/: CMakeLists.txt  constant.h  core_sweep.cpp  core_sweep.h  fifobuffer.h  qsweep-server.cpp  qsweepserver.pro  ringbuffer.h
src/qsweep-server/settings/: server_settings.cpp  server_settings.h
src/qsweep-server/worker/: spectrum_native_worker.h  spectrum_process_worker.cpp  system_monitor_worker.cpp  system_monitor_worker.h
src/qsweep-writer/: CMakeLists.txt  core_sweep_write.cpp  core_sweep_write.h  sweep_write_settings.h
src/qsweep-writer/database/: db_cleaner_workers.cpp  db_custom_workers.h  db_manager.h  db_reader_worker.cpp  db_reader_worker.h  db_writer_worker.h
src/qsweep-writer/provider/: mqtt_provider.cpp
src/qsweepclient/: Client.qml  ClientForm.ui.qml  DialogMessageLog.qml  DialogParamsSpectr.qml  FreqInfo.qml  FreqInfoForm.ui.qml  ParamsSpectr.qml  ParamsSpectrForm.ui.qml  README.md  SDRInfo.qml  SpectrSurface.qml  SpectrSurfaceForm.ui.qml  SweepControl.qml  SweepControlForm.ui.qml  SweepInfo.qml  SweepInfoForm.ui.qml  SweepMessageLog.qml  SweepMessageLogForm.ui.qml  SweepSpectr.qml  SweepSpectrForm.ui.qml  SweepSpectrGL.qml  SweepSystemMonitor.qml  SweepSystemMonitorForm.ui.qml  Top.qml  TopForm.ui.qml  coresweepclient.cpp  coresweepclient.h  main.qml  qml.qrc  qsweepclient.pro  statesweepclient.cpp  statesweepclient.h  systemmonitorinterface.cpp  systemmonitorinterface.h  user_interface.cpp  user_interface.h  userinterface.cpp  userinterface.h
src/qsweepclient/chart/: datasource.cpp  datasource.h  gl_plots.cpp  gl_plots.h  spectr_item.cpp  spectr_item.h  surface_spectr.cpp  surface_spectr.h  waterfallitem.cpp  waterfallitem.h
src/qsweepclient/database/: db_local_state.cpp  (+1 more)
src/qsweepremotecontrol/: core_sweep_remote_control.cpp  core_sweep_remote_control.h  qml.qrc  qsweepremotecontrol.cpp  qsweepremotecontrol.pro
src/qsweepserver/: CMakeLists.txt  constant.h  core_sweep.cpp  core_sweep.h  coresweep.cpp  coresweep.h  ctrlsweepworker.cpp  ctrlsweepworker.h  fifobuffer.cpp  hackrf_info.cpp  hackrf_info.h  hackrfinfo.cpp  hackrfinfo.h  parser_worker.cpp  process_worker.cpp  process_worker.h  qsweepserver.cpp  qsweepserver.pro  ringbuffer.cpp  spectrum_native_worker.cpp  spectrum_native_worker.h  spectrum_process_worker.cpp  spectrum_process_worker.h  sweepparams.h  sweepworker.cpp  sweepworker.h  systemmonitorworker.cpp  systemmonitorworker.h
src/qsweepserver/settings/: server_settings.cpp  server_settings.h  sweepserversettings.cpp  sweepserversettings.h
src/qsweepserver/worker/: parser_worker.cpp  parser_worker.h  spectrum_native_worker.cpp  spectrum_native_worker.h  spectrum_process_worker.cpp  spectrum_process_worker.h  state_worker.cpp  state_worker.h
src/qsweepwrite/: core_sweep_write.cpp  core_sweep_write.h  file_backup_workers.cpp  file_backup_workers.h  qsweepwrite.cpp  qsweepwrite.pro  sweep_write_settings.cpp  sweep_write_settings.h
(+219 files in other folders)
